# rumahku

./: .gitignore  README.md  TODO.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
.ai/: rules.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/teapotlab/rumahku/: BrushTrainer.kt  CaptureActivity.kt  CloudBuild.kt  CloudBuildActivity.kt  CloudBuildService.kt  DeviceCapability.kt  ImageGalleryActivity.kt  MainActivity.kt  MeshViewerActivity.kt  NativeBridge.kt  ReconstructionActivity.kt  ReconstructionService.kt  Settings.kt  SplatViewerActivity.kt  Storage.kt
app/src/main/java/com/teapotlab/rumahku/ar/: ArAvailability.kt  ArRenderer.kt  CoverageBuffer.kt  DisplayRotationHelper.kt  MarchingCubesTables.kt  (+1 more)
app/src/main/res/anim/: fade_in.xml  fade_out.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
backend/: .dockerignore  Dockerfile  colmap_refine.py  rumahku_credctl.py  serve.py
docs/: ARCHITECTURE.md  BACKEND.md  BENCH.md  CAPTURE_COVERAGE.md  LIVE_MESH.md  M1.md  M2.md  M3.md  MILESTONES.md  PHASE2.md  REFERENCE_ARCHITECTURE.md  S25.md  UX.md
docs/design/: quality-capture-mode.md
docs/reference/: capture-coverage-visualization.md  gaussian-splat-quality-qa.md  on-device-tsdf-fusion.md  pipeline-tuning-guide.md  production-architecture.md
docs/worklog/: 2026-07-07.md  2026-07-12.md
tools/: adb-unlock.sh
(+11 files in other folders)
